Client statement page

--- a/Osaca.Web/Web.config
+++ b/Osaca.Web/Web.config
@@ -26,6 +26,11 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    <customErrors mode="RemoteOnly" defaultRedirect="404.aspx">
+      <error statusCode="403" redirect="404.aspx" />
+      <error statusCode="404" redirect="404.aspx" />
+      <error statusCode="500" redirect="404.aspx" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files" minFileSizeForComp="1024">
