Update date formate d-m-y

--- a/IraqCars.Business/ShareWeb.Business.csproj
+++ b/IraqCars.Business/ShareWeb.Business.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D43B58A3-4E44-4BC6-A88F-AC94774C5EE5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IraqCars.Business</RootNamespace>
-    <AssemblyName>IraqCars.Business</AssemblyName>
+    <RootNamespace>ShareWeb.Business</RootNamespace>
+    <AssemblyName>ShareWeb.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -48,6 +48,7 @@
     <Compile Include="DataAccess\DbObject.cs" />
     <Compile Include="DataUtility\DataUtilities.cs" />
     <Compile Include="DataUtility\EncryptDecryptString.cs" />
+    <Compile Include="DataUtility\TrimmerUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
