Update documents pending/verified

--- a/Osaca.Web/bundleconfig.json
+++ b/Osaca.Web/bundleconfig.json
@@ -528,6 +528,18 @@
     ]
   },
   {
+    "outputFileName": "Scripts/sys/Outgoing/Outgoings.min.js",
+    "inputFiles": [
+      "Scripts/sys/Outgoing/Outgoings.js"
+    ]
+  },
+  {
+    "outputFileName": "Scripts/sys/balances.min.js",
+    "inputFiles": [
+      "Scripts/sys/balances.js"
+    ]
+  },
+  {
     "outputFileName": "Scripts/Documents/Documents-list.min.js",
     "inputFiles": [
       "Scripts/Documents/Documents-list.js"
