update product mode

--- a/Osaca.Web/bundleconfig.json
+++ b/Osaca.Web/bundleconfig.json
@@ -568,5 +568,11 @@
     "inputFiles": [
       "Scripts/sys/banks-list.js"
     ]
+  },
+  {
+    "outputFileName": "Scripts/sys/login.min.js",
+    "inputFiles": [
+      "Scripts/sys/login.js"
+    ]
   }
 ]
