--- a/Osaca.Web/Web.config
+++ b/Osaca.Web/Web.config
@@ -5,12 +5,19 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Aliraqcars.Domain.Properties.Settings.AliraqCarsConnectionString" providerName="System.Data.SqlClient" 
-         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OSACA;Persist Security Info=True; User ID=sa;Password=123456"/>
+    <add name="Aliraqcars.Domain.Properties.Settings.AliraqCarsConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OSACA;Persist Security Info=True; User ID=sa;Password=123456"/>
   </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None"/>
-    <compilation targetFramework="4.5" debug="false"/>
+    <compilation targetFramework="4.6.1" debug="false"/>
     <httpRuntime targetFramework="4.5" requestPathInvalidCharacters="&lt;,&gt;,*,%,&amp;,:,\,?" executionTimeout="500" maxRequestLength="1024000" requestLengthDiskThreshold="1024000" useFullyQualifiedRedirectUrl="false" minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="5000" enableKernelOutputCache="true" enableVersionHeader="false" requireRootedSaveAsPath="true" enable="true" shutdownTimeout="90" delayNotificationTimeout="5" waitChangeNotification="0" maxWaitChangeNotification="0" enableHeaderChecking="true" sendCacheControlHeader="true" apartmentThreading="false"/>
     <httpCookies httpOnlyCookies="true" requireSSL="false"/>
     <pages>
@@ -26,8 +33,8 @@
       <error statusCode="404" redirect="404.aspx"/>
       <error statusCode="500" redirect="404.aspx"/>
     </customErrors>
-  </system.web>    
-  <system.webServer>    
+  </system.web>
+  <system.webServer>
     <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files" minFileSizeForComp="1024">
       <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9"/>
       <dynamicTypes>
