--- a/Osaca.Web/Web.config
+++ b/Osaca.Web/Web.config
@@ -7,19 +7,16 @@
   <connectionStrings>
     <add name="Aliraqcars.Domain.Properties.Settings.AliraqCarsConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OSACA;Persist Security Info=True; User ID=sa;Password=123456"/>
   </connectionStrings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.6.1" />
-      </system.Web>
-  -->
   <system.web>
     <authentication mode="None"/>
-    <compilation targetFramework="4.6.1" debug="false"/>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" requestPathInvalidCharacters="&lt;,&gt;,*,%,&amp;,:,\,?" executionTimeout="500" maxRequestLength="1024000" requestLengthDiskThreshold="1024000" useFullyQualifiedRedirectUrl="false" minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="5000" enableKernelOutputCache="true" enableVersionHeader="false" requireRootedSaveAsPath="true" enable="true" shutdownTimeout="90" delayNotificationTimeout="5" waitChangeNotification="0" maxWaitChangeNotification="0" enableHeaderChecking="true" sendCacheControlHeader="true" apartmentThreading="false"/>
     <httpCookies httpOnlyCookies="true" requireSSL="false"/>
+    <globalization culture="en-US" uiCulture="en-US" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization"/>
