--- a/Osaca.Web/Web.config
+++ b/Osaca.Web/Web.config
@@ -5,9 +5,11 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Aliraqcars.Domain.Properties.Settings.AliraqCarsConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OSACA;Persist Security Info=True; User ID=sa;Password=123456"/>
+    <add name="Aliraqcars.Domain.Properties.Settings.AliraqCarsConnectionString" providerName="System.Data.SqlClient"
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=OSACA;Persist Security Info=True; User ID=sa;Password=123456"/>
   </connectionStrings>
   <system.web>
+    <trust level="Full" />
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
@@ -79,4 +81,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="2147483647" />
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
